csi3.1.0/volume/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx 
  namespace: default
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
